style: added margin-top to #jumbheader so navbar doesn't overlap part when clicking nav links. developers tab still needs to be fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,7 @@ blockquote {
   box-shadow: 2px 2px 2px rgb(167, 166, 166);
   background-color: #238193 !important;
   color: lightgray;
+  margin-top: 10px;
 }
 .header-text {
   margin: 0 auto;
